Fix GCC with C++11 build https://bugs.webkit.org/show_bug.cgi?id=111579

Reviewed by Anders Carlsson.

If the destructor is private, MemoryInstrumentation can not create an inherited class.

* css/PropertySetCSSStyleDeclaration.h:
(StyleRuleCSSStyleDeclaration):
* dom/ShadowRoot.h:
(ShadowRoot):
* loader/SubresourceLoader.h:
(SubresourceLoader):
* platform/Timer.h:

Canonical link: https://commits.webkit.org/132394@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147751 268f45cc-cd09-0410-ab3c-d52691b4dbfc